vect: Fix scalar stmt typo in vect_optimize_slp_pass [PR106886]

Fix a stupid typo in my vect_optimize_slp_pass patch.

gcc/
	PR tree-optimization/106886
	* tree-vect-slp.cc (vect_optimize_slp_pass::get_result_with_layout):
	Fix copying of scalar stmts.

gcc/testsuite/
	PR tree-optimization/106886
	* gcc.dg/vect/bb-slp-layout-21.c: New test.